libsdl2 (2.0.8+dfsg1-5) UNRELEASED; urgency=medium

  * 

 -- Manuel A. Fernandez Montecelo <mafm@debian.org>  Sat, 20 Oct 2018 11:45:40 +0200

libsdl2 (2.0.8+dfsg1-4) unstable; urgency=medium

  * Team upload
  * Update copyright file.
  * Ack previous NMU thanks!
  * Also add the testsuite from test directory (from bug #909778)
    - we need to find an approach to also run the resulting binaries
      automatically

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Mon, 01 Oct 2018 12:54:23 +0200

libsdl2 (2.0.8+dfsg1-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * d/tests/build: Add autopkgtest to check that dynamic linking with
    either pkg-config or sdl2-config works correctly
  * Revert "Make libsdl2-dev coinstallable again"
    (Closes: #909778) (reopens: #909740)

 -- Simon McVittie <smcv@debian.org>  Sun, 30 Sep 2018 16:13:38 +0100

libsdl2 (2.0.8+dfsg1-3) unstable; urgency=medium

  [ Hugh McMaster <hugh.mcmaster@outlook.com> ]
  * Make libsdl2 coinstallable again (Closes: #909740).

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Thu, 27 Sep 2018 16:21:47 +0200

libsdl2 (2.0.8+dfsg1-2) unstable; urgency=medium

  [ Felix Geyer ]
  * Remove Multi-Arch: same from libsdl2-dev as SDL_config.h is architecture
    dependent.

  [ Gianfranco Costamagna ]
  * Team upload
  * Enable vulkan everywhere
  * debian/patches/SDL2-dynapi-symbol-resolution-fix.patch:
    cherry-pick upstream fix for Unity-based games shipping bundled
    libsdl2 version (LP: #1772471)
    - thanks Ryan Gordon for the patch and help

  [ Ryan C. Gordon (icculus) ]
  * Disable --disable-loadso switch, it was useless and it is wrong
    in many cases (see LP: #1740517 for discussion)

 -- Felix Geyer <fgeyer@debian.org>  Sun, 09 Sep 2018 01:41:38 +0200

libsdl2 (2.0.8+dfsg1-1) unstable; urgency=medium

  * New upstream release.
    - Fixes IBus not working properly. (Closes: #878484)

 -- Felix Geyer <fgeyer@debian.org>  Sun, 04 Mar 2018 12:07:25 +0100
